Add component export for Pipeline

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -558,3 +558,5 @@ _UI_CVE_confidentialityImpact_feature = Confidentiality Impact
 _UI_Sensor_classificationClasses_feature = Classification Classes
 _UI_ClassificationClassDistribution_not_feature = Not
 _UI_Environment_oodProbability_feature = Ood Probability
+_UI_Component_outputPins_feature = Output Pins
+_UI_Component_inputPins_feature = Input Pins
