Add Check executability layer

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ build.xml
 plugins/e4sm.de.metamodel.acceleo.documentation/tasks/generate.xml
 
 plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext/.launch/
+
+scripts/import-intermediate-language/debug.log
