--- a/plugins/e4sm.de.timenet.runner/build.properties
+++ b/plugins/e4sm.de.timenet.runner/build.properties
@@ -2,5 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/antlr.jar,\
+               lib/GPAL.jar,\
+               lib/GPSC.jar,\
+               lib/jargs.jar,\
+               lib/RemoteSystem.jar
 jars.compile.order = .
