--- a/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext/build.properties
+++ b/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext/build.properties
@@ -12,6 +12,6 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.emf.mwe.utils,\
                      org.eclipse.emf.mwe2.lib,\
                      org.objectweb.asm,\
-                     org.apache.commons.logging,\
+                     org.apache.commons.commons-logging,\
                      org.apache.log4j
 jre.compilation.profile = JavaSE-17
