--- a/plugins/e4sm.de.timenet.runner/build.properties
+++ b/plugins/e4sm.de.timenet.runner/build.properties
@@ -6,5 +6,7 @@ bin.includes = META-INF/,\
                lib/GPAL.jar,\
                lib/GPSC.jar,\
                lib/jargs.jar,\
-               lib/RemoteSystem.jar
+               lib/RemoteSystem.jar,\
+               lib/gpal.jar,\
+               lib/gpsc.jar
 jars.compile.order = .
